test/e2e/emitters/agentgateway/testdata/input/basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agw-demo-localhost
spec:
  ingressClassName: nginx
  rules:
  - host: agw.demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
