test/e2e/emitters/agentgateway/testdata/input/cors.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cors-b
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://example.com, https://another.com"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-CustomResponseHeader"
spec:
  ingressClassName: nginx
  rules:
  - host: cors.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-backend
            port:
              number: 8080
