test/e2e/emitters/agentgateway/testdata/input/frontend_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-handshake-timeout: "20s"
    nginx.ingress.kubernetes.io/ssl-alpn: "h2, http/1.1"
  name: ingress-frontend-tls
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: frontend-tls.example.org
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
