test/e2e/emitters/agentgateway/testdata/input/ssl_redirect.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ssl-redirect-tls
  namespace: default
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURURENDQWpTZ0F3SUJBZ0lVV29CeGI2RGwvbnZvTGx0OTllcGluZmJyQnc0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RWhNQjhHQTFVRUF3d1ljM05zTFhKbFpHbHlaV04wTG14dlkyRnNaR1YyTG0xbE1CNFhEVEkxTVRJeApPREF4TXpJeU5sb1hEVEkyTVRJeE9EQXhNekl5Tmxvd0l6RWhNQjhHQTFVRUF3d1ljM05zTFhKbFpHbHlaV04wCkxteHZZMkZzWkdWMkxtMWxNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1QzAKZFlNWkJjaVhJSUx6ZUZzem9UQjRrU2RsWnJZYkxHY01IZGtobVgweVRyYVVxNnVzZkt4c0JFbVFjSXBjNGNBcQpVVWp3bUJIc2FtQkNkM [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ3prTFIxZ3hrRnlKY2cKZ3ZONFd6T2hNSGlSSjJWbXRoc3Nad3dkMlNHWmZUSk90cFNycTZ4OHJHd0VTWkJ3aWx6aHdDcFJTUENZRWV4cQpZRUozWGNmTkRESWxLM3RPYXRMTVZwN2wyWHRrd1psM0gwYTdhdFVTOFlSanU5LzZhSUs4UmV4M1U1MDBucEM5CmwwbXF4WE1XS1dvWDB6aHd0OHhJcTBKenQvaEV1SVhpRGdURmw5cE0yQlJDRElUcXJPakJxUHlpVUs2WUZQTm4KZWJYZWZQa0pib3lTb0thbEpWbXBXT3hNRFNMdm5MUjNBb1hjN1JvMUtsb0toMmg0QjdiUWk4WEVrM0JYaWI1cApmSVZKMzBrR2ZkQkJwa [...]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ssl-redirect-localhost
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ssl-redirect.localdev.me
    secretName: ssl-redirect-tls
  rules:
  - host: ssl-redirect.localdev.me
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
